# pinus-flexilis

./: .gitignore  CMakeLists.txt  README.adoc  README.md  config.ini
.github/workflows/: devel.yml
cfg/: config.ini
docs/: CLI.adoc  CLI.md
src/: cmd.c  cmd.h  main.c  tasks.c
src/agathis/: base.c  base.h  cmds.h  comm.c  comm.h  defs.h
src/cli/: cli.c  cli.h  cli_types.h  cmd.c  cmd.h
src/hw/: gpio.h  storage.c
src/hw/platform_sim/: base.c  base.h  platform.c  top.c  top.h
src/opt/: utils.h
src/platform/: platform.c  platform.h
src/sim/: misc.c  misc.h  state.c  state.h  top.c  top.h
